# pesez

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: publish-docker-image.yaml  run-tests.yaml
browserbox/: admin.py  apps.py  models.py  urls.py  views.py
browserbox/migrations/: 0002_create_BrowserBoxSession_model.py  0003_browser_box_without_user.py  0004_add_history_bb.py  0005_add_worker_model.py  0006_delete_historybrowserbox_remove_worker_available_and_more.py
docker/: staticsite.Dockerfile
nginx/: proxy.conf
pesez/: __init__.py  asgi.py  celery.py  production_settings.py  settings.py  tasks.py  urls.py  wsgi.py
pfbaas/: asgi.py  manage.py  production_settings.py  settings.py  urls.py
pfbaas/pfbaas/: urls.py  wsgi.py
static/styles/: styles.css  vars.css
static/styles/elements/: spinner.css
static/styles/pages/: accessProvider.css  accessResult.css  landing.css
templates/browserbox/: request.html  success.html
templates/registration/: login.html  success.html
templates/user_dashboard/: base.html
user_dashboard/: admin.py  models.py  views.py
user_dashboard/migrations/: 0001_crate_browserbox_model.py  0002_create_BrowserBoxSession_model.py
users/: admin.py  models.py
users/migrations/: 0001_create_custom_user.py  0002_alter_customuser_options.py
