[tool.poetry]
name = "pfbaas"
version = "0.1.0"
description = "PolarFox Browser as a service"
authors = ["S. Guliaev <dev.sagul@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
