[tool.poetry]
name = "pesez"
version = "0.1.0"
description = "PolarFox Browser as a service"
authors = ["S. Guliaev <dev.sagul@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
